fix: divider is folded on smaller screens

--- a/day18-shopcmd/css/divider.css
+++ b/day18-shopcmd/css/divider.css
@@ -1,5 +1,6 @@
 .divider {
   text-align: center;
+  white-space: nowrap;
 }
 
 .divider > div {
